--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="works.html">РАБОТЫ</a></li>
-                                            <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                                            <li><a href="contact.html">КОНТАКТЫ</a></li>
+                                            <li><a href="works.html">РОБОТИ</a></li>
+                                            <li><a href="services.html">ПОСЛУГИ ТА ЦІНИ</a></li>
+                                            <li><a href="feedback.html">ВІДГУКИ</a></li>
+                                            <li><a href="contact.html">КОНТАКТИ</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -87,7 +87,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                                        <a href="https://books.tonyonair.com.ua" target="_blank">МОЇ КНИГИ</a>
                                     </div>
                                 </div>
                             </div>
@@ -113,11 +113,10 @@
 
                             <p style="color:white">
                                 <font size="5">
-                                    Всім привіт. <br /><br />
+                                    Всім привіт, мене звати Антон Грищенко <br /><br />
 
-                                    Я профессионально занимаюсь видеосъемкой и написанием <br /> сценариев в городе
-                                    Киев.
-                                    <br /> Примеры моих работ в открытом доступе.
+                                    Я професійно займаюсь відеозйомкою та монтажем в місті Київ <br /> За останні 3 роки відзняв більше 100 відео
+                                    <br /> Приклади моїх робіт у відкритому доступі
 
                                 </font>
                             </p>
@@ -125,12 +124,12 @@
 
                             <p style="color:white">
                                 <font size="5">
-                                    Буду рад Вам помочь в создании качественного контента!
+                                    Буду радий вам допомогти у створенні якісного контенту!
 
                                 </font>
                             </p>
                             <br />
-                            <a class="boxed-btn3-line" href="works.html">СМОТРЕТЬ РАБОТЫ</a>
+                            <a class="boxed-btn3-line" href="works.html">ДИВИТИСЯ РОБОТИ</a>
                         </div>
                     </div>
                     <div class="my_img d-none d-lg-block">
@@ -148,7 +147,7 @@
             <div class="row text-center">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>Мои услуги</h3>
+                        <h3>Мої послуги</h3>
                     </div>
                 </div>
             </div>
@@ -160,7 +159,7 @@
                                 <img src="img/svg_icon/3.svg" alt="">
                             </div>
                             <h3>
-                                Видеооператор
+                                Відеооператор
                             </h3>
                         </div>
                     </a>
@@ -199,7 +198,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title">
-                        <h3>Отзывы</h3>
+                        <h3>Відгуки</h3>
                     </div>
                 </div>
             </div>
@@ -233,7 +232,7 @@
                                                 </span>
                                             </div>
                                             <br />
-                                            <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                            <a class="boxed-btn3-line" href="project7.html">ДИВИТИСЯ РОБОТУ</a>
                                         </div>
                                     </div>
                                 </div>
@@ -271,7 +270,7 @@
                                                 </span>
                                             </div>
                                             <br />
-                                            <a class="boxed-btn3-line" href="project6.html">СМОТРЕТЬ РАБОТУ</a>
+                                            <a class="boxed-btn3-line" href="project6.html">ДИВИТИСЯ РОБОТУ</a>
                                         </div>
                                     </div>
                                 </div>
@@ -307,7 +306,7 @@
                                                 </span>
                                             </div>
                                             <br />
-                                            <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                            <a class="boxed-btn3-line" href="project7.html">ДИВИТИСЯ РОБОТУ</a>
 
                                         </div>
                                     </div>
@@ -345,7 +344,7 @@
                                                 </span>
                                             </div>
                                             <br />
-                                            <a class="boxed-btn3-line" href="project2.html">СМОТРЕТЬ РАБОТУ</a>
+                                            <a class="boxed-btn3-line" href="project2.html">ДИВИТИСЯ РОБОТУ</a>
                                         </div>
                                     </div>
                                 </div>
@@ -381,7 +380,7 @@
                                                 </span>
                                             </div>
                                             <br />
-                                            <a class="boxed-btn3-line" href="project3.html">СМОТРЕТЬ РАБОТУ</a>
+                                            <a class="boxed-btn3-line" href="project3.html">ДИВИТИСЯ РОБОТУ</a>
                                         </div>
                                     </div>
                                 </div>
