--- a/services.html
+++ b/services.html
@@ -76,10 +76,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="works.html">РАБОТЫ</a></li>
-                                            <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                                            <li><a href="contact.html">КОНТАКТЫ</a></li>
+                                            <li><a href="works.html">РОБОТИ</a></li>
+                                            <li><a href="services.html">ПОСЛУГИ ТА ЦІНИ</a></li>
+                                            <li><a href="feedback.html">ВІДГУКИ</a></li>
+                                            <li><a href="contact.html">КОНТАКТИ</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -87,7 +87,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                            <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                                            <a href="https://books.tonyonair.com.ua" target="_blank">МОЇ КНИГИ</a>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">Мои услуги</h3>
+                        <h3 style="text-transform: none;">Мої послуги</h3>
                     </div>
                 </div>
             </div>
@@ -131,10 +131,10 @@
                             </div>
                             <br />
                             <h2 style="color: #DB9A64">
-                                Видеооператор
+                                Відеооператор
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                От 500 грн за час <br />Минимальный заказ 2 часа
+                                Від 500 грн/година <br />Мінімальне замовлення 2 години
                             </p>
                         </div>
                     </div>
@@ -142,14 +142,16 @@
                         <div class="service_text padding_left">
 
                             <p>
-                                Предоставляю следующие видеоуслуги:
-                                <br /> — постановочные виды съемок;
-                                <br /> — съемка музыкальных клипов;
-                                <br /> — короткий метр и полнометражные проекты;
-                                <br /> — запись интервью;
-                                <br /> — создание промороликов;
-                                <br /> — съемка backstage;
-                                <br /> — съемка для YouTube (блоги, анбоксинги, обзоры и т.д).
+                                Надаю такі відеопослуги:
+                                <br /> — постановочні та репортажні види зйомок;
+                                <br /> — зйомка музичних кліпів;
+                                <br /> — короткий метр та повнометражні проекти;
+                                <br /> — запис інтерв'ю;
+                                <br /> — створення промороликів;
+                                <br /> — зйомка backstage;
+                                <br /> — зйомка для YouTube (блоги, анбоксинги, огляди, тощо).
+                                <br /> — проведення прямих ефірів;
+                                <br /> — предметна зйомка;
                             </p>
                         </div>
                     </div>
@@ -170,7 +172,7 @@
                                 Сценарист
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                От 1500 грн за 5 страниц <br /> готового сценария
+                               Від 1500 грн за 5 сторінок <br /> готового сценарію
                             </p>
                         </div>
                     </div>
@@ -178,12 +180,12 @@
                         <div class="service_text padding_left">
 
                             <p>
-                                В написание сценария входит:
-                                <br /> — разработка идей фильмов, рекламных роликов, короткого метра, полного метра,
-                                YouTube проектов, музыкальных клипов;
-                                <br /> — формирование соответствующего контента (описания, скрипты актеров/ведущих,
-                                задания, подводки, подсказки);
-                                <br /> — написание сценария по утвержденной идее.
+                                До написання сценарію входить:
+                                <br /> — розробка ідей фільмів, рекламних роликів, короткого метра, повного метра,
+                                YouTube проектів, музичних кліпів;
+;
+                                <br /> — формування відповідного контенту (описи, скрипти акторів/ведучих, тощо);
+                                <br /> — написання сценарію за затвердженою ідеєю.
                             </p>
 
 
@@ -206,18 +208,18 @@
                                 Монтажер
                             </h2>
                             <p class="border border-white; text-center" style="color: white">
-                                &nbsp;<br />50% от стоимости сьемки
+                                &nbsp;<br />50% від вартості зйомки
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-8 col-md-6">
                         <div class="service_text padding_left">
                             <p>
-                                В монтаж готового продукта входит:
-                                <br /> — монтаж видео;
-                                <br /> — цветокоррекция видео;
-                                <br /> — коррекция и сведение звука;
-                                <br /> — озвучка, запись дикторского текста.
+                                У монтаж готового продукту входить:
+                                <br /> — монтаж відео;
+                                <br /> — кольорокорекція відео;
+                                <br /> — корекція та зведення звуку;
+                                <br /> — озвучка, запис дикторського тексту.
                             </p>
                         </div>
                     </div>
