--- a/works.html
+++ b/works.html
@@ -75,10 +75,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="works.html">РАБОТЫ</a></li>
-                                            <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                                            <li><a href="contact.html">КОНТАКТЫ</a></li>
+                                            <li><a href="works.html">РОБОТИ</a></li>
+                                            <li><a href="services.html">ПОСЛУГИ ТА ЦІНИ</a></li>
+                                            <li><a href="feedback.html">ВІДГУКИ</a></li>
+                                            <li><a href="contact.html">КОНТАКТИ</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -86,7 +86,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                            <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                                            <a href="https://books.tonyonair.com.ua" target="_blank">МОЇ КНИГИ</a>
                                     </div>
                                 </div>
                             </div>
@@ -108,7 +108,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">Мои работы</h3>
+                        <h3 style="text-transform: none;">Мої роботи</h3>
                     </div>
                 </div>
             </div>
@@ -358,9 +358,9 @@
                                     </div>
                                 </div>
                                 <div class="gallery_heading">
-                                    <a href="">
+                                    
                                         <h4>ANTI-TRAVEL.special — Барселона, Андорра</h4>
-                                    </a>
+                                    
                                 </div>
                             </div>
                         </div>
