--- a/contact.html
+++ b/contact.html
@@ -77,10 +77,10 @@
                 <div class="main-menu  d-none d-lg-block">
                   <nav>
                     <ul id="navigation">
-                      <li><a href="works.html">РАБОТЫ</a></li>
-                      <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                      <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                      <li><a href="contact.html">КОНТАКТЫ</a></li>
+                      <li><a href="works.html">РОБОТИ</a></li>
+                      <li><a href="services.html">ПОСЛУГИ ТА ЦІНИ</a></li>
+                      <li><a href="feedback.html">ВІДГУКИ</a></li>
+                      <li><a href="contact.html">КОНТАКТИ</a></li>
                     </ul>
                   </nav>
                 </div>
@@ -88,7 +88,7 @@
               <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                 <div class="Appointment">
                     <div class="book_btn d-none d-lg-block">
-                            <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                            <a href="https://books.tonyonair.com.ua" target="_blank">МОЇ КНИГИ</a>
                     </div>
                 </div>
             </div>
@@ -110,9 +110,9 @@
       <div class="row">
         <div class="col-xl-12">
           <div class="bradcam_text text-center">
-            <h3 style="text-transform: none;">Мои контакты</h3>
+            <h3 style="text-transform: none;">Мої контакти</h3>
             <br/>
-            <p style="text-transform: none;">Выберете любой удобный для Вас способ коммуникации </p>
+            <p style="text-transform: none;">Оберіть будь-який зручний для Вас спосіб комунікації </p>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="ti-home"></i></span>
             <div class="media-body">
-              <h3>Украина, город Киев</h3>
+              <h3>Україна, місто Київ</h3>
             </div>
           </div>
           <div class="media contact-info">
@@ -158,7 +158,7 @@
           <div class="media contact-info">
             <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
             <div class="media-body">
-              <h3><a href="https://www.instagram.com/tony_on_air" target="_blank">tony_on_air</a></h3>
+              <h3><a href="https://www.instagram.com/grishchenko.video" target="_blank">grishchenko.video</a></h3>
               <p>Instagram</p>
             </div>
           </div>
