--- a/feedback.html
+++ b/feedback.html
@@ -76,10 +76,10 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="works.html">РАБОТЫ</a></li>
-                                            <li><a href="services.html">УСЛУГИ И ЦЕНЫ</a></li>
-                                            <li><a href="feedback.html">ОТЗЫВЫ</a></li>
-                                            <li><a href="contact.html">КОНТАКТЫ</a></li>
+                                            <li><a href="works.html">РОБОТИ</a></li>
+                                            <li><a href="services.html">ПОСЛУГИ ТА ЦІНИ</a></li>
+                                            <li><a href="feedback.html">ВІДГУКИ</a></li>
+                                            <li><a href="contact.html">КОНТАКТИ</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -87,7 +87,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="book_btn d-none d-lg-block">
-                                        <a href="https://books.tonyonair.com.ua" target="_blank">МОИ КНИГИ</a>
+                                        <a href="https://books.tonyonair.com.ua" target="_blank">МОЇ КНИГИ</a>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3 style="text-transform: none;">Отзывы</h3>
+                        <h3 style="text-transform: none;">Відгуки</h3>
                     </div>
                 </div>
             </div>
@@ -151,7 +151,7 @@
                                         </span>
                                     </div>
                                     <br />
-                                    <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                    <a class="boxed-btn3-line" href="project7.html">ДИВИТИСЯ РОБОТУ</a>
                                 </div>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
                                         </span>
                                     </div>
                                     <br />
-                                    <a class="boxed-btn3-line" href="project6.html">СМОТРЕТЬ РАБОТУ</a>
+                                    <a class="boxed-btn3-line" href="project6.html">ДИВИТИСЯ РОБОТУ</a>
                                 </div>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
                                         </span>
                                     </div>
                                     <br />
-                                    <a class="boxed-btn3-line" href="project7.html">СМОТРЕТЬ РАБОТУ</a>
+                                    <a class="boxed-btn3-line" href="project7.html">ДИВИТИСЯ РОБОТУ</a>
                                 </div>
                             </div>
 
@@ -260,7 +260,7 @@
                                         </span>
                                     </div>
                                     <br />
-                                    <a class="boxed-btn3-line" href="project2.html">СМОТРЕТЬ РАБОТУ</a>
+                                    <a class="boxed-btn3-line" href="project2.html">ДИВИТИСЯ РОБОТУ</a>
                                 </div>
                             </div>
                         </div>
@@ -297,7 +297,7 @@
                                         </span>
                                     </div>
                                     <br />
-                                    <a class="boxed-btn3-line" href="project3.html">СМОТРЕТЬ РАБОТУ</a>
+                                    <a class="boxed-btn3-line" href="project3.html">ДИВИТИСЯ РОБОТУ</a>
                                 </div>
                             </div>
                         </div>
