--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         </div>
                     </a>
                     </div>
-                    <div class="col-md-3"><a href="https://www.instagram.com/tony_on_air" target="_blank">                      
+                    <div class="col-md-3"><a href="https://www.instagram.com/grishchenko.video" target="_blank">                      
                         <div class="single_links d-flex justify-content-between align-items-center">
                             <span class="contact-info__icon"><i class="fa fa-instagram" aria-hidden="true"></i></span>
                             <span>Instagram</span>
