--- a/works.html
+++ b/works.html
@@ -12,7 +12,7 @@
         gtag('config', 'UA-161686559-1');
     </script>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Антон Грищенко. Мои работы</title>
+    <title>Антон Грищенко. Мої роботи</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="keywords"
         content=" Антон Грищенко, примеры работ Грищенко, Грищенко портфолио, мои работы, Грищенко работы, Грищенко оператор, Видеооператор в Киеве, сценарист киев, монтаж киев, видеосьемка киев, сьемка клипов, отзывы Антон Грищенко, видеосъемка интервью, сьемка фильмов, сьемка короткометражного кино, создание промороликов, съемка backstage, съемка для YouTube
